--- a/ITGeekProject/ITGeekProject/ITGeekProject.csproj
+++ b/ITGeekProject/ITGeekProject/ITGeekProject.csproj
@@ -194,6 +194,11 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201704262254451_InitializeLocalDB.cs" />
+    <Compile Include="Migrations\201704262254451_InitializeLocalDB.Designer.cs">
+      <DependentUpon>201704262254451_InitializeLocalDB.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\IdentityModels.cs" />
     <Compile Include="Models\ManageViewModels.cs" />
@@ -275,6 +280,11 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="Scripts\jquery-1.10.2.min.map" />
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Migrations\201704262254451_InitializeLocalDB.resx">
+      <DependentUpon>201704262254451_InitializeLocalDB.cs</DependentUpon>
+    </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
