--- a/ITGeekProject/ITGeekProject/Web.config
+++ b/ITGeekProject/ITGeekProject/Web.config
@@ -9,7 +9,10 @@
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
   <connectionStrings>
-    <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\aspnet-ITGeekProject-20170427013821.mdf;Initial Catalog=aspnet-ITGeekProject-20170427013821;Integrated Security=True"
+    <add name="DefaultConnection"
+         connectionString="Data Source=.;
+         Initial Catalog=ITGeekProject-Dev;
+         Integrated Security=True"
       providerName="System.Data.SqlClient" />
   </connectionStrings>
   <appSettings>
