Added images to the project

--- a/ITGeekProject/ITGeekProject/ITGeekProject.csproj
+++ b/ITGeekProject/ITGeekProject/ITGeekProject.csproj
@@ -212,6 +212,9 @@
     <Content Include="fonts\glyphicons-halflings-regular.svg" />
     <Content Include="Global.asax" />
     <Content Include="Content\Site.css" />
+    <Content Include="images\121.jpg" />
+    <Content Include="images\Awesome-best-nature-pictures.jpg" />
+    <Content Include="images\pexels-photo.jpg" />
     <Content Include="Scripts\bootstrap.js" />
     <Content Include="Scripts\bootstrap.min.js" />
     <Content Include="ApplicationInsights.config">
