--- a/ITGeekProject/ITGeekProject/ITGeekProject.Gateway.csproj
+++ b/ITGeekProject/ITGeekProject/ITGeekProject.Gateway.csproj
@@ -194,13 +194,7 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
-    <Compile Include="Migrations\201704262346575_AddedYactoServer.cs" />
-    <Compile Include="Migrations\201704262346575_AddedYactoServer.Designer.cs">
-      <DependentUpon>201704262346575_AddedYactoServer.cs</DependentUpon>
-    </Compile>
-    <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
-    <Compile Include="Models\IdentityModels.cs" />
     <Compile Include="Models\ManageViewModels.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Startup.cs" />
@@ -285,9 +279,14 @@
     <Content Include="Scripts\jquery-1.10.2.min.map" />
   </ItemGroup>
   <ItemGroup>
-    <EmbeddedResource Include="Migrations\201704262346575_AddedYactoServer.resx">
-      <DependentUpon>201704262346575_AddedYactoServer.cs</DependentUpon>
-    </EmbeddedResource>
+    <ProjectReference Include="..\ITGeekProject.DbContext\ITGeekProject.DbContext.csproj">
+      <Project>{26D22A0F-F260-4C06-8CDF-0A875F0E75C5}</Project>
+      <Name>ITGeekProject.DbContext</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\ITGeekProject.Entities\ITGeekProject.Entities.csproj">
+      <Project>{0263FC3D-CD7C-46BC-8BE0-C7CD69778BF0}</Project>
+      <Name>ITGeekProject.Entities</Name>
+    </ProjectReference>
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
