--- a/ITGeekProject/ITGeekProject/Web.config
+++ b/ITGeekProject/ITGeekProject/Web.config
@@ -8,19 +8,19 @@
     <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
-  
+
   <!--Development Version-->
-  <!--<connectionStrings>
-    <add name="DefaultConnection"
+  <connectionStrings>
+    <add name="ITGeek-DevConnection"
          connectionString="Data Source=.;
          Initial Catalog=ITGeekProject-Dev;
          Integrated Security=True"
-      providerName="System.Data.SqlClient" /> 
-  </connectionStrings> -->
+      providerName="System.Data.SqlClient" />
+  </connectionStrings>
 
   <!-- Production Version-->
-  <connectionStrings>
-    <add name="DefaultConnection"
+  <!-- <connectionStrings>
+    <add name="ITGeekConnection"
         connectionString="Data Source=211fe0ed-16cd-47d7-b9b8-a761018466c4.sqlserver.sequelizer.com;
         Database=db211fe0ed16cd47d7b9b8a761018466c4;
         User ID=yjqpjcreyltifwac;
@@ -28,7 +28,7 @@
         Persist Security Info=True;
         MultipleActiveResultSets=true"
        providerName="System.Data.SqlClient" />
-  </connectionStrings>
+  </connectionStrings> -->
   
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
