--- a/ITGeekProject/ITGeekProject/ITGeekProject.Gateway.csproj
+++ b/ITGeekProject/ITGeekProject/ITGeekProject.Gateway.csproj
@@ -194,8 +194,23 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
-    <Compile Include="Models\AccountViewModels.cs" />
-    <Compile Include="Models\ManageViewModels.cs" />
+    <Compile Include="Models\AccountViewModels\ExternalLoginConfirmationViewModel.cs" />
+    <Compile Include="Models\AccountViewModels\ExternalLoginListViewModel.cs" />
+    <Compile Include="Models\AccountViewModels\ForgotPasswordViewModel.cs" />
+    <Compile Include="Models\AccountViewModels\ForgotViewModel.cs" />
+    <Compile Include="Models\AccountViewModels\LoginViewModel.cs" />
+    <Compile Include="Models\AccountViewModels\RegisterViewModel.cs" />
+    <Compile Include="Models\AccountViewModels\ResetPasswordViewModel.cs" />
+    <Compile Include="Models\AccountViewModels\SendCodeViewModel.cs" />
+    <Compile Include="Models\AccountViewModels\VerifyCodeViewModel.cs" />
+    <Compile Include="Models\ManageViewwModels\AddPhoneNumberViewModel.cs" />
+    <Compile Include="Models\ManageViewwModels\ChangePasswordViewModel.cs" />
+    <Compile Include="Models\ManageViewwModels\ConfigureTwoFactorViewModel.cs" />
+    <Compile Include="Models\ManageViewwModels\FactorViewModel.cs" />
+    <Compile Include="Models\ManageViewwModels\IndexViewModel.cs" />
+    <Compile Include="Models\ManageViewwModels\ManageLoginsViewModel.cs" />
+    <Compile Include="Models\ManageViewwModels\SetPasswordViewModel.cs" />
+    <Compile Include="Models\ManageViewwModels\VerifyPhoneNumberViewModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Startup.cs" />
   </ItemGroup>
