--- a/ITGeekProject/ITGeekProject.DbContext/ITGeekProject.DbContext.csproj
+++ b/ITGeekProject/ITGeekProject.DbContext/ITGeekProject.DbContext.csproj
@@ -44,6 +44,7 @@
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.ComponentModel.DataAnnotations" />
+    <Reference Include="System.Configuration" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
@@ -54,6 +55,12 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="ApplicationDbContext.cs" />
+    <Compile Include="Migrations\201704271607207_AddedRoles.cs" />
+    <Compile Include="Migrations\201704271607207_AddedRoles.Designer.cs">
+      <DependentUpon>201704271607207_AddedRoles.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\Configuration.cs" />
+    <Compile Include="Migrations\Initializer.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -65,6 +72,11 @@
       <Project>{0263FC3D-CD7C-46BC-8BE0-C7CD69778BF0}</Project>
       <Name>ITGeekProject.Entities</Name>
     </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Migrations\201704271607207_AddedRoles.resx">
+      <DependentUpon>201704271607207_AddedRoles.cs</DependentUpon>
+    </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
