--- a/ITGeekProject/ITGeekProject/ITGeekProject.Gateway.csproj
+++ b/ITGeekProject/ITGeekProject/ITGeekProject.Gateway.csproj
@@ -203,14 +203,14 @@
     <Compile Include="Models\AccountViewModels\ResetPasswordViewModel.cs" />
     <Compile Include="Models\AccountViewModels\SendCodeViewModel.cs" />
     <Compile Include="Models\AccountViewModels\VerifyCodeViewModel.cs" />
-    <Compile Include="Models\ManageViewwModels\AddPhoneNumberViewModel.cs" />
-    <Compile Include="Models\ManageViewwModels\ChangePasswordViewModel.cs" />
-    <Compile Include="Models\ManageViewwModels\ConfigureTwoFactorViewModel.cs" />
-    <Compile Include="Models\ManageViewwModels\FactorViewModel.cs" />
-    <Compile Include="Models\ManageViewwModels\IndexViewModel.cs" />
-    <Compile Include="Models\ManageViewwModels\ManageLoginsViewModel.cs" />
-    <Compile Include="Models\ManageViewwModels\SetPasswordViewModel.cs" />
-    <Compile Include="Models\ManageViewwModels\VerifyPhoneNumberViewModel.cs" />
+    <Compile Include="Models\ManageViewModels\AddPhoneNumberViewModel.cs" />
+    <Compile Include="Models\ManageViewModels\ChangePasswordViewModel.cs" />
+    <Compile Include="Models\ManageViewModels\ConfigureTwoFactorViewModel.cs" />
+    <Compile Include="Models\ManageViewModels\FactorViewModel.cs" />
+    <Compile Include="Models\ManageViewModels\IndexViewModel.cs" />
+    <Compile Include="Models\ManageViewModels\ManageLoginsViewModel.cs" />
+    <Compile Include="Models\ManageViewModels\SetPasswordViewModel.cs" />
+    <Compile Include="Models\ManageViewModels\VerifyPhoneNumberViewModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Startup.cs" />
   </ItemGroup>
